--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,7 +199,7 @@ html{
     position: relative;
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/chicago.jpg') top center / cover no-repeat;
+    background: url("/assets/img/chicago.jpg") top center / cover no-repeat;
 }
 
 #slider .text-content{
